#AP-1648 subscription link not working issue resolved, header property alignment, add,edit property popup issues resolved, add fname,lname for company team

--- a/src/app/_components/layout/header/header.component.scss
+++ b/src/app/_components/layout/header/header.component.scss
@@ -148,7 +148,7 @@ ul.dropdown-menu.propMenu.show > li {
   -webkit-box-direction: normal;
   flex-direction: column;
   display: -webkit-inline-box;
-  display: inline-flex;
+  display: inline-block;
   width: 200px;
 }
 
